--- a/src/css/global.css
+++ b/src/css/global.css
@@ -254,7 +254,6 @@ p {
   background-color: #1d1d1d;
   box-shadow: 0px 0px 20px 0px rgb(0 0 0) inset, 0 0 0 0 black;
   color: white;
-  font-size: 1.2em;
   height: fit-content;
   width: max-content;
   top: 8px;
@@ -380,7 +379,7 @@ p {
   justify-content: space-around;
 }
 
-.burger span{
+.patty{
   width: 20px;
   height: 2px;
   background-color: white;
@@ -412,7 +411,7 @@ p {
     height: 20px;
   }
   
-  .burger span{
+  .patty{
     width: 20px;
     height: 2px;
   }
@@ -437,7 +436,7 @@ p {
     height: 30px;
   }
   
-  .burger span{
+  .patty{
     width: 30px;
     height: 3px;
   }
@@ -479,7 +478,7 @@ p {
     height: 30px;
   }
   
-  .burger span{
+  .patty{
     width: 30px;
     height: 3px;
   }
@@ -499,38 +498,31 @@ p {
   flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 10px;
+  padding: 16px;
 }
 
 .card {
+  cursor: pointer;
+  flex-direction: column;
   display: flex;
-  margin: 2em;
-  max-width: 40%;
-  background-color: #0f0f0f !important;
+  background-color: #0f0f0f;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 12px 40px 0 rgba(0, 0, 0, 0.19) !important;
-  border-radius: 7% !important;
-  transition: all 0.2s ease-in-out !important;
+  border-radius: 16px;
+  transition: all 0.2s ease-in-out;
+  margin-bottom: 24px;
 }
 
 .card:hover {
   position: relative;
-  transform: scale(1.06);
+  transform: scale(1.02);
 }
 
-.card-action-area {
-  display: flex !important;
-  flex-direction: column;
-}
-
-.card-pic {
-  width: fit-content !important;
-  margin: 3% auto !important;
-}
 
 .content-header {
-  font-size: 1.8em;
+ 
   font-weight: 600;
-  color: inherit;
-  margin: 0 auto 0.5em;
+ 
+  margin: 0 auto 8px;
   text-decoration: underline;
 }
 
@@ -539,25 +531,19 @@ p {
   flex-direction: column;
   flex-grow: 1;
   background-color: rgb(245, 242, 239);
-  color: #000;
+  
   padding: 5px 10px 15px 10px;
-  height: 70%;
 }
 
 .content-description {
-  font-size: 1.5em;
-  margin-bottom: 15px;
-  text-align: left;
-  color: #000;
   font-weight: 500;
 }
 
 .complexity-container {
-  margin-top: auto;
-  font-size: 1.6em;
-  line-height: 1.5em;
-  color: inherit;
-  text-align: left;
+  margin-top: 16px;
+  
+  line-height: 24px;
+  
   font-weight: 600;
 }
 
