--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,3 +1,5 @@
+ @import url("https://use.typekit.net/emu7cwz.css");
+
 :root {
   --background: white;
   --foreground: black;
@@ -18,12 +20,10 @@
 
 [data-theme="dark"] .card-content {
   background-color: #202124;
-  color: #03DAC5;
 }
 
-[data-theme="dark"] .content-description {
-  color: #eaeaea;
-  font-weight: 400;
+[data-theme="dark"] .times {
+  color: white;
 }
 
 [data-theme="dark"] ul {
@@ -113,11 +113,14 @@
 
 [data-theme="dark"] .footer {
   background-color: #0c0c0c;
-  color: #03DAC5;
 }
 
 [data-theme="dark"] .wave {
   background-color: #1f1f1f;
+}
+
+[data-theme="dark"] .footer-wave.wave {
+  fill: #0c0c0c;
 }
 
 body {
@@ -251,30 +254,70 @@ p {
 }
 
 .about-me-div {
-  background-color: #1d1d1d;
-  box-shadow: 0px 0px 20px 0px rgb(0 0 0) inset, 0 0 0 0 black;
-  color: white;
-  height: fit-content;
-  width: max-content;
-  top: 8px;
-  left: 970px;
-  padding: 0em 1.5em 1em;
+  position: absolute;
+  right: 0;
+  top: 20px;
+  z-index: 11;
+  background-color: white;
+  padding: 8px;
+  
+  width: 200px;
+ 
+  
+  border: solid 5px black;
+  border-radius: 10px;
 }
 
-.hamburger.about-me-div {
-  padding: 1em 1.25em;
-}
-
-.about-me-div a {
+.about-me-btn {
   display: flex;
+  color: white;
+  margin: 8px;
+  padding: 8px;
+  border-radius: 8px;
+  text-align: center;
   text-decoration: none;
-  line-height: 1em;
-  margin-top: 1em;
-  color: ghostwhite;
+  font-weight: 700;
+  letter-spacing: 1px;
 }
 
-.map-box {
+.about-me-btn:hover {
+  transform: scale(1.02);
+}
+
+.about-me-btn:active {
+  transform: scale(0.99);
+}
+
+.folio {
+  background-color: #303134;
+}
+
+.github {
+  background-color: #121212;
+}
+
+.linked {
+  background-color: white;
+  color: #2e79b6;
+  border: solid 3px #2e79b6;
+}
+
+.gmail {
+  background-color: red;
+}
+
+.about-me-text {
   margin: auto;
+  font-size: 20px;
+}
+
+.about-me-copyright-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.about-me-sitemap {
+  text-align: center;
 }
 
 #menu-appbar {
@@ -283,23 +326,6 @@ p {
 
 #other-menu-appbar {
   padding: 0;
-}
-
-.contacts-title {
-  margin: auto;
-  color: #f06c07;
-  font-size: 1.5em;
-}
-
-.contacts {
-  margin-left: 1em;
-  margin-right: auto;
-  margin-top: auto;
-  font-size: 1.2em;
-}
-
-.email-contact {
-  margin-bottom: 10px;
 }
 
 .responsive-link {
@@ -312,22 +338,31 @@ p {
   top: 1px;
 }
 
-.about-me-p {
-  font-size: 20px;
-  color: #f06c07;
-  padding-bottom: 1px;
-  margin-left: 0.3em;
+@media (min-width: 600px) {
+  .about-me-div {
+    top: 28px;
+   width: 225px;
+  }
 }
 
-.nav-copyright-container {
-  text-align: center;
-  font-size: 0.7em;
+@media (min-width: 800px) {
+  
+  .about-me-btn {
+    margin: 12px 8px;
+  }
+
+  .about-me-div {
+    top: 32px;
+  }
+
 }
 
-.inner-copyright-container {
-  display: flex;
-  justify-content: space-evenly;
-  padding-top: 1em;
+@media (min-width: 1000px) {
+  .about-me-div {
+    top: 36px;
+    width: 250px;
+  }
+
 }
 
 /*******************Header********************/
@@ -341,7 +376,7 @@ p {
 .title-container {
   display: flex;
   background-color: #0f0f0f;
-  padding: 16px;
+  padding: 8px;
   margin-bottom: -3px;
   color: white;
   justify-content: center;
@@ -350,9 +385,10 @@ p {
 .title-container h1 {
   pointer-events: none;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 22px;
   margin: 0 4px;
   text-shadow: 1px 1px 0px #585858, 2px 1px 1px #585858;
+  letter-spacing: .03em;
 }
 
 .wave {
@@ -363,10 +399,10 @@ p {
 
 .logo {
   position: absolute;
-  left: 16px;
-  top: 12px;
-  width: 30px;
-  height: 30px;
+  left: 18px;
+  top: 10px;
+  width: 24px;
+  height: 24px;
 }
 
 .burger {
@@ -374,7 +410,7 @@ p {
   display: flex;
   flex-direction: column;
   right: 20px;
-  top: 16px;
+  top: 12px;
   height: 20px;
   justify-content: space-around;
 }
@@ -382,58 +418,26 @@ p {
 .patty {
   width: 20px;
   height: 2px;
-  background-color: white;
+  background-color: blue;
   border-radius: 30px;
-}
-
-.header-menu {
-  position: absolute;
-  right: 0;
-  top: 0;
-  left: unset;
-  z-index: 11;
-}
-
-@media (min-width: 400px) {
-  .title-container h1 {
-    font-size: 22px;
-    margin: 0 4px;
-  }
-
-  .logo {
-    left: 16px;
-    top: 12px;
-  }
-
-  .burger {
-    right: 22px;
-    top: 18px;
-    height: 20px;
-  }
-
-  .patty {
-    width: 20px;
-    height: 2px;
-  }
 }
 
 @media (min-width: 600px) {
   .title-container h1 {
-    font-size: 32px;
-    margin: 0 8px;
+    font-size: 36px;
   }
 
   .logo {
     left: 30px;
-    top: 14px;
+    top: 12px;
     width: 40px;
     height: 40px;
   }
 
   .burger {
     right: 30px;
-    top: 18px;
-    height: 30px;
+    top: 16px;
+     height: 30px;
   }
 
   .patty {
@@ -450,14 +454,14 @@ p {
 
   .logo {
     left: 40px;
-    top: 14px;
+    top: 12px;
     width: 60px;
     height: 60px;
   }
 
   .burger {
     right: 40px;
-    top: 28px;
+    top: 24px;
   }
 
 }
@@ -476,23 +480,32 @@ p {
   .burger {
     right: 60px;
     top: 32px;
-    height: 30px;
+    height: 40px;
   }
 
   .patty {
-    width: 30px;
+    width: 40px;
     height: 3px;
   }
 }
+
+@media (min-width: 1200px) {
+  .burger {
+    top: 26px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .burger {
+    top: 22px;
+  }
+}
+
 
 /*******************Home**********************/
 .home-switch {
   display: flex;
   justify-content: center;
-}
-
-.MuiSwitch-root {
-  transform: scale(1.25);
 }
 
 .home-content {
@@ -519,13 +532,13 @@ p {
   transform: scale(1.02);
 }
 
+.card:active {
+  transform: scale(0.99);
+}
 
 .content-header {
-
   font-weight: 600;
-
-  margin: 0 auto 8px;
-  text-decoration: underline;
+  margin: 4px auto 8px;
 }
 
 .card-content {
@@ -533,7 +546,6 @@ p {
   flex-direction: column;
   flex-grow: 1;
   background-color: rgb(245, 242, 239);
-
   padding: 5px 10px 15px 10px;
 }
 
@@ -542,19 +554,72 @@ p {
 }
 
 .complexity-container {
+  display: flex;
+  justify-content: space-evenly;
   margin-top: 16px;
-
   line-height: 24px;
-
   font-weight: 600;
+  color: blue;
 }
+
+.times {
+  color: black;
+}
+
+@media (min-width: 400px) {
+  .content-header {
+    font-size: 18px;
+  }
+}
+
+@media (min-width: 500px) {
+  .card {
+    width: 70%;
+  }
+}
+
+@media (min-width: 600px) {
+  .card {
+    width: 60%;
+    margin-bottom: 40px;
+    font-size: 20px;
+  }
+
+  .content-header {
+    font-size: 22px;
+  }
+}
+
+@media (min-width: 800px) {
+  .card {
+    width: 50%;
+  }
+
+  .card-content {
+    padding: 8px 24px 24px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .card {
+    max-width: 40%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .home-content {
+    width: 70%;
+    margin: auto;
+  }
+}
+
+
 
 /****************BARS*****************/
 .equalizer {
   display: flex;
   justify-content: center;
-  height: 11rem;
-  margin-bottom: 1rem;
+  margin: 1em auto;
 }
 
 .equalizer-bar {
@@ -565,7 +630,10 @@ p {
 }
 
 .equalizer-bar span {
-  background: #03DAC5;
+  background: rgb(3, 38, 164);
+  background: linear-gradient(90deg, rgba(3, 38, 164, 1) 0%, rgba(0, 72, 252, 1) 0%, rgba(3, 12, 27, 1) 100%);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 /*******************Top Container**********************/
@@ -946,6 +1014,7 @@ pre span {
   border-radius: 50%;
   margin: 4px;
 }
+
 /*********************Tubes********************/
 .row {
   display: flex;
@@ -1641,17 +1710,19 @@ pre span {
   background-color: #0f0f0f;
   align-items: center;
   padding: 24px 0 30px;
+  z-index: 1;
+  position: relative;
 }
 
 .hi {
   text-align: center;
-  margin: 8px;
+  margin-bottom: 12px;
 }
 
 .my-description {
   pointer-events: none;
   text-align: center;
-  margin: 12px;
+  width: 90%;
 }
 
 .divider {
@@ -1663,28 +1734,29 @@ pre span {
 
 .footer-links {
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   color: yellow;
-  text-align: center;
   line-height: 33px;
   cursor: pointer;
+  width: 90%;
+  text-decoration: underline;
+}
+
+.active-footer-link {
+  display: none;
 }
 
 .footer-svg-container {
   transform: rotate(180deg);
-  margin-top: 5%;
   position: relative;
   top: 1px;
 }
 
 
-.middle-container {
+.copyright-container {
   display: flex;
-  flex-direction: column;
-  margin: auto;
-  padding: 24px 0;
-  width: 80%;
-  justify-content: center;
+  justify-content: space-evenly;
+  width: 90%;
 }
 
 .socials {
@@ -1692,17 +1764,18 @@ pre span {
   justify-content: space-evenly;
 }
 
-.copyright-container {
-  display: flex;
-  justify-content: space-evenly;
-  margin: 16px 0;
-}
-
 .sitemap-link {
   color: yellow !important;
   cursor: pointer !important;
-  text-decoration: none;
+  text-decoration: underline;
   text-align: center;
+}
+
+.btm-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 @media (min-width: 500px) {
@@ -1712,6 +1785,15 @@ pre span {
 
   .middle-container {
     width: 50%;
+  }
+}
+
+@media (min-width: 600px) {
+  .footer-links {
+    width: 60%;
+  }
+  .copyright-container {
+    width: 60%;
   }
 }
 
@@ -1725,48 +1807,34 @@ pre span {
   }
 }
 
-@media (min-width: 1200px) {
-  .footer {
-    flex-direction: row;
-  }
-
-  .my-description {
-    margin: 0 12px;
-  }
-
-  .divider {
-    height: 5em;
-    width: 2px;
-    margin: 0 40px;
-  }
-
+@media (min-width: 800px) {
   .footer-links {
-    width: 25%;
+    width: 50%;
   }
-
-  .avatar {
-    margin: 0 20px 0 30px;
-  }
-
-  .avatar img {
-    height: 80px !important;
-    width: 100px !important;
-  }
-
-  .middle-container {
-    margin-right: 20px;
+  .copyright-container {
+    width: 50%;
   }
 }
 
-@media (min-width: 1400px) {
-  .footer {
-    padding: 0 0 2em;
+@media (min-width: 1000px) {
+  .my-description {
+    width: 50%;
+  }
+  
+  .copyright-container {
+    width: 45%;
   }
 
-  .divider {
-    height: 5em;
-    width: 2px;
-    margin: 0 40px;
+  .footer-links {
+    width: 45%;
+  }
+}
+
+@media (min-width: 1200px) {
+  
+  .my-description {
+    margin: 0 12px;
+    width: 40%;
   }
 
   .footer-links {
@@ -1774,12 +1842,43 @@ pre span {
   }
 
   .avatar {
-    margin: 0 20px 0 50px;
+    margin: 0 20px 0 30px;
   }
 
   .avatar img {
-    height: 100px !important;
-    width: 120px !important;
+    height: 90px !important;
+    width: 60px !important;
+  }
+
+  .middle-container {
+    margin-right: 20px;
+  }
+
+  .copyright-container {
+    width: 30%;
+  }
+
+  .divider {
+    display: none;
+  }
+
+  .btm-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    margin: 24px auto;
+  }
+  
+}
+
+@media (min-width: 1400px) {
+  .footer {
+    padding: 0 0 2em;
+  }
+
+  .avatar {
+    margin: 0 20px 0 50px;
   }
 
   .middle-container {
